--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+  background-color: #75b5ee;
+  height: 100vh;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
